--- a/project/app/config/routing.yml
+++ b/project/app/config/routing.yml
@@ -1,6 +1,6 @@
-app:
-    resource: @AppBundle/Controller/
-    type:     annotation
+#app:
+#    resource: @AppBundle/Controller/
+#    type:     annotation
 
 lesons_bundle:
     resource: "@DIAndUnitTestsBundle/Resources/config/routing.yml"
