--- a/project/app/config/routing.yml
+++ b/project/app/config/routing.yml
@@ -1,3 +1,10 @@
+forms_and_validation:
+    resource: "@FormsAndValidationBundle/Resources/config/routing.yml"
+    prefix:   /
+
+app:
+    resource: @AppBundle/Controller/
+    type:     annotation
 
 lesons_bundle:
     resource: "@DIAndUnitTestsBundle/Resources/config/routing.yml"
