--- a/project/src/Lessons/FormsAndValidationBundle/Resources/config/doctrine/RequestContactType.orm.yml
+++ b/project/src/Lessons/FormsAndValidationBundle/Resources/config/doctrine/RequestContactType.orm.yml
@@ -21,7 +21,8 @@ Lessons\FormsAndValidationBundle\Entity\RequestContactType:
                 default: 0
         status:
             type: boolean
-            default: true
+            options:
+                default: true
 
     manyToOne:
         category:
