--- a/project/src/Lessons/FormsAndValidationBundle/Resources/config/routing.yml
+++ b/project/src/Lessons/FormsAndValidationBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-forms_and_validation_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: FormsAndValidationBundle:Default:index }
+forms_and_validation:
+    path:     /forms
+    defaults: { _controller: FormsAndValidationBundle:Form:request }
