addd orms and form

--- a/project/src/Lessons/FormsAndValidationBundle/Resources/config/doctrine/RequestContact.orm.yml
+++ b/project/src/Lessons/FormsAndValidationBundle/Resources/config/doctrine/RequestContact.orm.yml
@@ -32,8 +32,9 @@ Lessons\FormsAndValidationBundle\Entity\RequestContact:
                 unsigned: true
         status:
             type: boolean
+            nullable: false
             options:
-                default: true
+                default: 0
     manyToOne:
         requestType:
             targetEntity: RequestContactType
